<resources>
    <string name="app_name">NTU Event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="account_login">Login</string>

    <string name="menu_home">Home</string>
    <string name="menu_events">Events</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_qr_scanner">QR Scanner</string>
    <string name="menu_stallholder_application">Stallholder Application</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="contact_us_name">Name:</string>
    <string name="contact_us_email">Email:</string>
    <string name="contact_us_query">Query:</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="navigation_event_text">If you would like to view the location of an event, please go to the event and click "Find on map".</string>

    <string name="home_text">Welcome to Nottingham Trent University! We are one of the biggest institutions in the country, providing courses on everything from Veterinary Science to International Business Management. To support our current and prospective students we host numerous events throguhout the year open to everyone. This application is provided for you in order to support you experience at our events before, during and after.</string>
</resources>
