<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/text_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/contact_us_name"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/contact_us_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:background="@drawable/custom_edittext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/contact_us_email"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/contact_us_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your email"
            android:background="@drawable/custom_edittext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/contact_us_query"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/contact_us_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your query here"
            android:minLines="8"
            android:background="@drawable/custom_edittext"/>

        <Button
            android:id="@+id/contact_us_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>